pipeline/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      automountServiceAccountToken: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.3
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
      protocol: TCP
  selector:
    app: keycloak
